--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     ],
     "require": {
         "php": "^8.0",
+        "inertiajs/inertia-laravel": "^0.6.8",
         "illuminate/support": "^8.0||^9.0||^10.0",
         "laravel/legacy-factories": "^1.3"
     },
