--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "inertiajs/inertia-laravel": "^0.6.8",
-        "illuminate/support": "^8.0||^9.0||^10.0",
+        "php": "^8.2",
+        "inertiajs/inertia-laravel": "^1.0",
+        "illuminate/support": "^8.0||^9.0||^10.0||^11.0",
         "laravel/legacy-factories": "^1.3"
     },
     "require-dev": {
